--- a/src/index.css
+++ b/src/index.css
@@ -81,7 +81,7 @@ body {
   line-height: 1.5;
   background: #f7f7f8;
   font-size: 14px;
-  font-family: "Lucida Console", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-text-size-adjust: 100% !important;
