--- a/src/index.css
+++ b/src/index.css
@@ -221,12 +221,18 @@ body.white{
   padding: 15px 0;
   border-bottom: 1px solid #eaeaea;
   display: flex;
+  align-items: center;
   justify-content: space-between;
 }
 
 .modal__label {
   flex-shrink: 0;
   color: #7E7E7E;
+}
+
+.modal__link{
+  font-size: 12px;
+  color: #19ac18;
 }
 
 .modal__input {
@@ -237,7 +243,9 @@ body.white{
   width: 100%;
   font-size: 14px;
 }
-
+.modal__input--left{
+  text-align: left;
+}
 .modal__foot {
   padding: 15px;
 }
